test/testdata/valid/role_inline.cue
package config

import "github.com/grantcarthew/start/test/testdata/schemas"

// Role with inline prompt
roles: "code-reviewer": schemas.#Role & {
	description: "Expert code reviewer"
	prompt: """
		You are an expert code reviewer with deep knowledge of software
		engineering best practices, security vulnerabilities, and performance
		optimization.

		Focus on:
		- Code quality and readability
		- Security issues
		- Performance concerns
		- Best practices
		"""
	tags: ["review", "code", "quality"]
}
